syntax = "proto3";

import "svg.proto";

package map_renderer_serialize;

message Settings {
	double width = 1;
	double height = 2;
	double padding = 3;
	double line_width = 4;
	double stop_radius = 5;
	int32 bus_label_font_size = 6;
	svg_serialize.Point bus_label_offset = 7;
	int32 stop_label_font_size = 8;
	svg_serialize.Point stop_label_offset = 9;
	svg_serialize.Color underlayer_color = 10;
	double underlayer_width = 11;
	repeated svg_serialize.Color color_palette = 12;
}