syntax = "proto3";

import "graph.proto";

package transport_router_serialize;

message Settings {
	int32 wait_time = 1;
	double velocity = 2;
}

message WaitData {
	uint32 stop_id = 1;
}

message BusData {
	uint32 bus_id = 1;
	int32 stop_count = 2;
}

message RouteSegment {
	enum Type {
		WAIT = 0;
		BUS = 1;
	};
	
	Type type = 1;
	oneof route_types {
		WaitData wait_data = 2;
		BusData bus_data = 3;
	}
	double time = 4;
}

message TransportGraph {
	Settings settings = 1;
	graph_serialize.Graph graph = 2;
	map<uint32, uint64> id_by_stops_ = 3;
	repeated RouteSegment segments = 4;
}

message TransportRouter {
	TransportGraph transport_graph = 1;
	graph_serialize.Router router = 2;
}